--- a/css/index.css
+++ b/css/index.css
@@ -197,9 +197,15 @@ header {
     z-index: 3;
     backdrop-filter: blur(5px);
     padding: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .slider-section .slider .slider-content h1 {
+    width: 100%;
+    text-align: center;
     color: #fff;
     font-weight: 600;
     text-shadow: 0px 0px 2px #000;
@@ -207,17 +213,16 @@ header {
 }
 
 .slider-section .slider .slider-content p {
-    font-size: 1.125rem;
-    line-height: 1.5;
-    font-weight: 400;
+    font-size: 1.25rem;
+    line-height: 1.2;
+    font-weight: 500;
     color: #fff;
     margin: .5rem 0rem;
+    text-align: center;
 }
 
 .slider-section .slider .slider-content a {
-    position: inherit;
-    bottom: 1rem;
-    left: 1rem;
+    margin-top: 1rem !important;
 }
 
 /* key fetured section */
