--- a/css/index.css
+++ b/css/index.css
@@ -93,7 +93,47 @@ main {
 }
 
 
+/* loader section */
+.loader-section {
+    margin: 0;
+    padding: 0;
+    position: fixed;
+    z-index: 999;
+    top: 0;left: 0;right: 0;bottom: 0;
+    background-color: #0005;
+}
 
+.loader {
+    width: 32px;
+    height: 32px;
+    position: relative;
+    border-radius: 50%;
+    color: #fff;
+    animation: fill 1s ease-in infinite alternate;
+  }
+  .loader::before , .loader::after {
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    border-radius: 50%;
+    left: 48px;
+    top: 0;
+    animation: fill 0.9s ease-in infinite alternate;
+  }
+  
+  .loader::after {
+    left: auto;
+    right: 48px;
+    animation-duration: 1.1s;
+  }
+  
+  @keyframes fill {
+   0% {  box-shadow: 0 0 0 2px inset }
+   100%{ box-shadow: 0 0 0 10px inset }
+  }
+    
+  
 /* header section */
 header {
     width: 100%;
