--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,16 @@ body {
     font-family: "Roboto", sans-serif;
 }
 
+input:focus {
+    outline: none !important;
+    box-shadow: none !important;
+}
+
+input::placeholder {
+    color: rgba(0, 0, 0, 0.5) !important; 
+}
+
+
 /* global variables */
 :root {
     --bg-1: #f0f8ff;
@@ -160,6 +170,8 @@ header {
     position: absolute;
     -ms-flex-preferred-size: 100%;
     flex-basis: 100%;
+    flex-direction: column;
+    -webkit-box-direction: column;
     -webkit-box-flex: 1;
     -ms-flex-positive: 1;
     flex-grow: 1;
@@ -423,7 +435,7 @@ header {
 }
 
 .subscribe::placeholder {
-    color: #fff5;
+    color: #fff5 !important;
 }
 
 .footer h5 {
@@ -486,4 +498,16 @@ header {
 
 .notice-details-section .notice-image {
     cursor: pointer;
+}
+
+
+/* login register section */
+.login-register-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    background-color: var(--bg-3);
 }
